Add accelerometer controls